--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
-python-telegram-bot==20.6
-python-dotenv==1.0.0
-pytz==2024.1
+python-telegram-bot==20.7
 psycopg2-binary
+python-dotenv
+requests
+xmltodict
+lxml
+apscheduler
+pytz
+tzlocal
+cachetools
+urllib3
+certifi
+idna
+charset-normalizer
